# bdb-classifier

./: .gitignore  LICENSE  README.md  conda.yaml  pyproject.toml  requirements.txt
notebooks/: evaluate_distilhubert.ipynb  process_dataset.ipynb  train.ipynb  train_distilhubert.ipynb
resources/classifier_distilhubert/: wandb_export_2025-01-14T23_29_56.011+01_00.csv  wandb_export_2025-01-14T23_30_14.288+01_00.csv  wandb_export_2025-01-14T23_30_32.439+01_00.csv
src/bdb_classifier/: dataset.py
